# drive-the-thoughts

./: .gitignore  ARTIFACT_REPORT.json  README.md  build_apptainer.sh  environment-artifact.yml  pyproject.toml  requirements-artifact.txt
alpasim/: .gitignore  Apptainer.def  pyproject.toml  setup_local_env.sh
alpasim/src/: cot_consistency.json
alpasim/tools/: check_consistency_accuracy.py  export_benchmark_frame_folders.py  extract_rollout_frames.sh  run_benchmark_llm_matrix.py  run_benchmark_llm_matrix_update.slurm.sh  run_top_scenes_alpamayo.sh  run_top_scenes_alpamayo.slurm.sh  run_top_scenes_alpamayo_monitor.slurm.sh  run_tutorial_alpamayo_cot_analysis.py  run_tutorial_alpamayo_cot_analysis.slurm.sh  serve_qwen35_4b_fp8_vllm.sh
data/benchmark/: benchmark.json
src/alpasim_utils/: cot_meta_actions.py  trajectory_additional_info.py
src/benchmark_analysis/: __init__.py  judgments.py  loading.py  metrics.py  schema.py
src/cot_analysis/: __init__.py  __main__.py  benchmark_source.py  (+3 more)
tests/: test_benchmark_analysis.py  test_cot_analysis_variants.py  test_cot_consistency.py  test_llm_judge.py  test_monitor_core_sync.py  test_prompt_registry.py  test_run_benchmark_llm_matrix.py  test_trajectory_additional_info.py  test_trajectory_safety_outcomes.py
tools/: build_consistency_spreadsheet.py  check_consistency_accuracy.py  export_benchmark_frame_folders.py  plot_cot_reliability_heatmap.py  plot_repeated_main_eval.py  run_benchmark_llm_matrix.py  run_benchmark_llm_matrix_update.slurm.sh  serve_qwen3_4b_fp8_vllm.sh  serve_qwen_vllm.sh  sync_monitor_core.py
(+470 files in other folders)
