[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drive-the-thoughts-artifact"
version = "0.1.0"
description = "Reproduction environment for the Drive the Thoughts artifact"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "numpy",
  "shapely",
  "Pillow",
  "matplotlib",
  "pytest",
]

[project.optional-dependencies]
# Needed only to rerun the LLM judge (cot_analysis / run_benchmark_llm_matrix).
llm = ["openai"]
# Needed only for .xlsx output from build_consistency_spreadsheet.
xlsx = ["openpyxl"]

[tool.hatch.build.targets.wheel]
packages = [
  "src/alpasim_utils",
  "src/benchmark_analysis",
  "src/cot_analysis",
  "src/trajectory_safety",
]

[tool.pytest.ini_options]
# "." lets tests import the CLI scripts as tools.<name> (namespace package).
pythonpath = ["src", "."]
testpaths = ["tests"]
